# fastapi-azure-functions

./: .env.example  .funcignore  .gitignore  .markdownlint.json  README.md  azure.yaml  deploy-azure.ps1  deploy-azure.sh  fastapi_app.py  function_app.py  pyproject.toml  requirements.txt  test.http
.github/: DEPLOYMENT_SETUP.md
.github/prompts/: commit-and-push.prompt.md
.github/workflows/: azure-functions-app-python.yml  azure-functions-deploy.yml  main_my-fastapi-func-sj.yml
app/: config.py  main.py
app/api/: routes.py
app/models/: requests.py
infra/: README.md  abbreviations.json  main.bicep  main.parameters.json
infra/app/: api.bicep  rbac.bicep
tests/: conftest.py  test_api.py  test_integration.py
